# gtk_worklog

./: AGENTS.md  README.md  SPEC.md  main.py  pyproject.toml
tests/: test_api_client.py  test_google_oauth.py  test_main.py  test_user_store.py
worklog/: app.py
worklog/auth/: firebase.py  google.py
worklog/services/: api_client.py
worklog/stores/: user_store.py
worklog/ui/: day_card.py  log_item.py  login_window.py  main_window.py  style.css
